# netgent

./: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  README.md  __init__.py  analyze_isps.py  docker-compose.yml  env.example  extracted_isps.csv  isp_analysis.csv  pyproject.toml  requirements.txt
.browser-cache/: Local State  SingletonCookie  SingletonLock  SingletonSocket
.browser-cache/Default/: Cookies-journal  DIPS-wal  Network Persistent State  Preferences  Reporting and NEL  TransportSecurity  Web Data
.browser-cache/GrShaderCache/: index
.browser-cache/GraphiteDawnCache/: index
.browser-cache/ShaderCache/: index
.github/: dependabot.yml
.github/workflows/: ci.yml
browsing/: X.py  bluesky.py  instagram-reels.py  instagram-scroll.py  linkedin.py  reddit.py  tiktok-reel.py  twitch-watch.py  youtube.py
conference/: cisco-webex.py  google-meet.py  jitsi.py  microsoft-teams.py  ring-central.py  talkly.py  whereby.py  zoho-meeting.py  zoom.py
docs/: BQT+Workflow.md  README.md
examples/: README.md  agent_test.py  controller_test.py  google.py  instagram_example.py  program_controller_check_test.py  program_controller_test.py  real_world_example.py  test_mark_page.py  test_state_synthesis.py  trigger_registry_demo.py  utils_test.py  web_agent_example.py
examples/basic_example/: basic-example-workflow.json  generated_workflow.py  google.py  google_prompts.json  run_generated_workflow.py
examples/bqt/: Dockerfile  Dockerfile.daystarr  bqt_database.py  daystarr.py  dobson.py  example.py  mbbs.py  start.sh  start_daystarr.sh  test.py
examples/browsing/: example.py  instagram-reel.py  instagram-scroll.py  linkedin.py  twitch-watch.py
examples/conference/: google-meet.py  jitsi.py  microsoft-teams.py  ring-central.py  zoom.py
examples/isps/: 123net.py  aeneas.py  allpoints.py  allwest.py  altafiber.py  att.py  (+135 more)
infrastructure/: .dockerignore  Dockerfile  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  requirements.docker.txt  requirements.txt
queries/: extract_span_data.py  traces_export_20260125_142557.csv  traces_export_20260125_154655.csv  traces_export_20260125_161138.csv  traces_export_20260125_165038.csv  traces_export_20260125_173806.csv  traces_export_20260125_174153.csv  traces_export_20260125_180553.csv  traces_export_20260125_201001.csv  traces_export_20260125_212114.csv  traces_export_20260125_215704.csv  traces_export_20260125_225633.csv  traces_export_20260125_231451.csv  traces_export_20260125_235331.csv  traces_export_20260126_010748.csv  traces_export_20260126_020805.csv  traces_export_20260126_023548.csv  traces_export_20260126_031838.csv  traces_export_20260126_040025.csv  traces_export_20260126_043706.csv  traces_export_20260126_054015.csv  traces_export_20260126_062408.csv  traces_export_20260126_073050.csv  traces_export_20260126_074034.csv  traces_export_20260126_080103.csv  traces_export_20260126_092307.csv
scripts/: configure_novnc.sh  extract_isps_from_trace.py  list_isps.py  replay_meet_workflow.py  replay_zoom_workflow.py  run_netgent.py  run_netgent_generate.py  start.sh
src/: README.md  main.py  readme.md  schema.py
streaming/: aparat.py  disney-plus-espn.py  disney-plus-national-geo.py  disney-plus-non-navigate.py  hulu-non-navigate.py  puffer.py  roku.py  tubi.py  twitch.py  youtube-non-navigate.py
tests/: conftest.py
(+1640 files in other folders)
