[project]
name = "netgent"
version = "0.1.0"
description = ""
authors = [
    {name = "Eugene Vuong",email = "vuongeugene@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "seleniumbase (>=4.42.5,<5.0.0)",
    "selenium (>=4.36.0,<5.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "langgraph (>=0.5.0,<0.6.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-google-genai (>=2.1.6,<3.0.0)",
    "langchain-google-vertexai (>=2.0.27,<3.0.0)",
    "langchain-core (>=0.3.67,<0.4.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "netgent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
