[project]
name = "agentic-thin-waist-shared"
version = "0.1.0"
description = "Shared library and scripts for agentic-thin-waist (NetGent client, models, S3, DB)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "boto3>=1.42.65",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "playwright>=1.58.0",
    "Pillow>=11.2.1",
    "psycopg[binary]>=3.2.6",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.36",
    "langgraph>=1.1.3",
    "langgraph-sdk>=0.3.12",
    "langchain-google-genai>=3.2.0,<4",
    "langchain-anthropic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain>=1.2.13",
    "browser-use==0.5.11",
    "selenium>=4.20.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-toml",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
